TAG: gxdload-6-0-15-1
DATE: 12/02/2019
STAFF: lec 
CHANGES: TR13007/RNA Sequence project
add IMG_Image/IMG_ImagePane autosequence to gxdimageload.py

TAG: gxdload-6-0-10-1
DATE: 09/14/2017
STAFF: lec 
CHANGES:
1) TR12649/GUDMAP3
added gxdimageload.py

TAG: gxdimageload-6-0-8-1
DATE: 03/29/2017
STAFF: lec
CHANGES: 
TR12504/IMPC/lacz updates
moved impc scripts to gxdload/tr12504 product

TAG: gxdimageload-6-0-4-1
DATE: 04/26/2016, 05/05/2016
STAFF: lec
CHANGES: 
TR12026/lacz
1) convert to Git
2) assocResultImage.py/convert to postgres

TAG: gxdimageload-6-0-2-4
DATE: 02/16/2016
STAFF: sc
CHANGES: TR12026 - LacZ Images
impclacz.config - removed config that is already in main config
impclaczPrepFullSize.csh - added calls to load caption and copyright notes

TAG: gxdimageload-6-0-2-3
TAG: gxdimageload-6-0-2-2
TAG: gxdimageload-6-0-2-1
DATE: 02/14/2016
STAFF: sc
CHANGES: TR12026 - LacZ Images
1) gxdimageload.py - converted to postgres
2) pixload.sh - uncommented pertinent code
3) Added:
a) impclacz.config
b) impclaczPrepFullSize.csh
c) impclaczPrepFullSize.py
d) impclaczpixload.csh

TAG: gxdimageload-5-1-7-5
TAG: gxdimageload-5-1-7-4
TAG: gxdimageload-5-1-7-3
TAG: gxdimageload-5-1-7-2
TAG: gxdimageload-5-1-7-1
DATE: 01/30/2014
STAFF: lec
CHANGES: 
1) TR11471/GUDMAP2/images

TAG: gxdimageload-5-1-5-1
STAFF: lec
CHANGES: 
1) TR11350/remove thumbnail stuff

TAG: gxdimageload-5-0-0-3
TAG: gxdimageload-5-0-0-2
TAG: gxdimageload-5-0-0-1
DATE: 04/05/2012, 04/25/2012
STAFF: lec
CHANGES: 
1) TR10976/tr10976pixload.sh

TAG: gxdimageload-4-4-2-3
DATE: 02/13/2012
STAFF: lec
CHANGES: 
1) TR10978/added x,y,width,height to IMG_ImagePane

TAG: gxdimageload-4-4-2-2
DATE: 11/22/2011
STAFF: lec
CHANGES: 
1) added -f to *csh

TAG: gxdimageload-4-4-2-1
DATE: 10/11/2011
STAFF: lec
CHANGES: 
1) tr10872*

TAG: gxdimageload-4-4-1-9
TAG: gxdimageload-4-4-1-8
TAG: gxdimageload-4-4-1-7
TAG: gxdimageload-4-4-1-6
TAG: gxdimageload-4-4-1-5
TAG: gxdimageload-4-4-1-4
DATE: 07/06/2011
STAFF: lec